service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
  namespace: default
spec:
  type: NodePort
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 31250  # Change this if needed
